# Game-Dev-Stuff

./: .gitignore  Game Dev Stuff.cbp  Game Dev Stuff.depend  Game Dev Stuff.layout  README.md  Vector.cpp  Vector.hpp  Vector3.cpp  Vector3.h  main.cpp
Game Dev Projects/: CMakeLists.txt
Game Dev Projects/Project Weiro/: CMakeLists.txt  Project Weiro.cpp  Project Weiro.h
Game Dev Projects/Project Weiro/include/: Debug_Out.h
Game Dev Projects/Project Weiro/include/Math/: Game_Math.h  Vector2.h  Vector3.h
Game Dev Projects/Project Weiro/src/: Debug_Out.cpp  Vector2.cpp  Vector3.cpp
Game Project/: CMakeLists.txt
Game Project/Game Project/: CMakeLists.txt  Game Project.cpp  Game Project.h
Game Project/Game Project/include/: DEBUG_OUT.h  OBJ_LOADER.h
Game Project/Game Project/include/Math/: Vector2.h
Game Project/Game Project/include/Physics/: Physics.h
Game Project/Game Project/src/: Debug.cpp  Mesh.cpp  OBJLoad.cpp
Game Project/Game Project/src/Math/: Vector2.cpp  Vector3.cpp
Game-Dev Projects/: Game-Dev Projects.sln
Game-Dev Projects/Spare-Time/: Spare-Time.vcxproj  Spare-Time.vcxproj.filters
Game-Dev Projects/Spare-Time/src/: main.cpp
Game-Dev Projects/Spare-Time/src/Math/: Quaternion.cpp
Game-Dev Projects/Spare-Time/x64/Debug/: Spare-Time.exe.recipe  Spare-Time.ilk  vc143.idb
Game-Dev Projects/Spare-Time/x64/Debug/Spare-Time.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
include/: Mesh.h
include/Math/: Rigidbody.h
src/: Mesh.cpp  glad.c  main.cpp
src/Game Object/: Transform.h
src/Math/: MATH_STUFF.H  Matrix.h  Quaternion.h  Vector3.h
